<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24px"
        android:title="Home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_found_24px"
        android:title="My Post" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_24px"
        android:title="Map"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24px"
        android:title="Settings"/>

</menu>
